--- a/app/views/admin_pages/managecompany2.html.erb
+++ b/app/views/admin_pages/managecompany2.html.erb
@@ -112,7 +112,7 @@
                                 <div class="card card-body text-center" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="card-body">
                                         <div class="mx-auto">
-                                            <img src="/template-assets/images/medical.png" style="max-width: 200px;">
+                                            <img src="/template-assets/images/medical.png" style="max-width: 150px;">
                                             <h4 class="card-title mb-2 pt-3" style="font-family: dosis;">Get instant, 24/7 access to our online GP service</h4>
                                                 <button onclick="replace();return false"/ type="button" class="btn btn-warning waves-effect waves-light mt-3" style="color: #3D3D36">Sign up for free</button> 
                                         </div>
@@ -346,7 +346,7 @@
                             </div>
                             <div class="modal-footer">
                                 <a href="" class="btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">Save as draft</a>
-                                <button type="button" class="btn btn-warning waves-effect waves-light" style="color: #3D3D36">Save and publish</button>
+                                <a href="" class="btn btn-warning waves-effect waves-light" style="color: #3D3D36" id="btn-archive">Save and publish</a>
                             </div>
                         </div>
 <!-- /.modal-content -->
