--- a/app/views/admin_pages/managecompany2.html.erb
+++ b/app/views/admin_pages/managecompany2.html.erb
@@ -153,7 +153,7 @@
                                             <img src="/template-assets/images/users/user-5.jpg" class="rounded-circle avatar-sm" alt="friend">
                                         </div>
                                         <div class="col-lg-7">
-                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">James Martin</h4>
+                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Jamie Martin</h4>
                                             <p style="font-family: dosis;">Recognised by Jane Doe</p>
                                         </div>
                                         <div class="col-lg-3">
@@ -166,7 +166,7 @@
                                             <img src="/template-assets/images/users/user-3.jpg" class="rounded-circle avatar-sm" alt="friend">
                                         </div>
                                         <div class="col-lg-7">
-                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Richard Beattie</h4>
+                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Rick Beattie</h4>
                                             <p style="font-family: dosis;">Recognised by Jane Doe</p>
                                         </div>
                                         <div class="col-lg-3">
@@ -179,7 +179,7 @@
                                             <img src="/template-assets/images/users/user-2.jpg" class="rounded-circle avatar-sm" alt="friend">
                                         </div>
                                         <div class="col-lg-7">
-                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Rick James</h4>
+                                            <h4 style="font-family: dosis; font-weight: 600;" class="mt-0">Rachel James</h4>
                                             <p style="font-family: dosis;">Recognised by Jane Doe</p>
                                         </div>
                                         <div class="col-lg-3">
