--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -55,41 +55,33 @@
                         <a href="javascript:void(0);" class="dropdown-item notify-item">
                             <div class="notify-icon">
                                 <img src="/template-assets/images/users/user-2.jpg" class="img-fluid rounded-circle" alt="" /> </div>
-                            <p class="notify-details">Colleague Name recognised you</p>
+                            <p class="notify-details">Rachel James recognised you</p>
                             <p class="text-muted mb-0 user-msg">
                                 <small>Just now</small>
                             </p>
                         </a>
-    
+
                         <!-- item-->
                         <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-info">
+                            <div class="notify-icon bg-primary">
                                 <i class="mdi mdi-comment-account-outline"></i>
                             </div>
-                            <p class="notify-details">Team Shoutout from Manager Name
+                            <p class="notify-details">Don't forget to setup your teams
                                 <small class="text-muted">1 day ago</small>
                             </p>
                         </a>
 
                         <!-- item-->
                         <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon">
-                                <img src="/template-assets/images/users/user-2.jpg" class="img-fluid rounded-circle" alt="" /> </div>
-                            <p class="notify-details">Manager Name rewarded you</p>
-                            <p class="text-muted mb-0 user-msg">
-                                <small>15 days ago</small>
-                            </p>
-                        </a>
-
-                        <!-- item-->
-                        <a href="javascript:void(0);" class="dropdown-item notify-item">
-                            <div class="notify-icon bg-pink">
-                                <i class="fe-gift"></i>
+                            <div class="notify-icon bg-primary">
+                                <i class="mdi mdi-comment-account-outline"></i>
                             </div>
-                            <p class="notify-details">You've been gifted 1 day holiday by Team Manager
-                                <small class="text-muted">20 days ago</small>
+                            <p class="notify-details">Your insights survey's going out tomorrow
+                                <small class="text-muted">1 day ago</small>
                             </p>
                         </a>
+    
+                       
                     </div>
     
                     <!-- All-->
@@ -224,6 +216,16 @@
                             <p class="notify-details">Colleague Name recognised you</p>
                             <p class="text-muted mb-0 user-msg">
                                 <small>Just now</small>
+                            </p>
+                        </a>
+
+                        <!-- item-->
+                        <a href="javascript:void(0);" class="dropdown-item notify-item">
+                            <div class="notify-icon bg-primary">
+                                <i class="mdi mdi-comment-account-outline"></i>
+                            </div>
+                            <p class="notify-details">Don't forget to setup your teams
+                                <small class="text-muted">1 day ago</small>
                             </p>
                         </a>
     
