--- a/app/views/admin_pages/managecompany2.html.erb
+++ b/app/views/admin_pages/managecompany2.html.erb
@@ -44,7 +44,7 @@
                     <div class="col-lg-12"> 
                         <div class="row">
                             <div class="col-lg-6">
-                                <h3>Your perks</h3>
+                                <h3 style="font-family: dosis">Your perks</h3>
                             </div>
                              <div class="col-lg-6">
                                 <a href="" class="float-right btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">See all perks</a></h4>
@@ -123,7 +123,7 @@
 
                  <div class="row mt-2">
                     <div class="col-lg-6">
-                        <h3>Your activity</h3>
+                        <h3 style="font-family: dosis">Your activity</h3>
                     </div>
                      <div class="col-lg-6">
                         <a href="" class="float-right btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">See all recogntion</a></h4>
