--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,7 +20,7 @@
 
             <li>
                 <button type="button" class="btn btn-warning waves-effect waves-light mt-2 mr-4 d-none d-lg-block
-" style="color: #3D3D36">Admin</button>
+" style="color: #3D3D36;">Admin</button>
             </li>
 
             <li class="notification-list">
