--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -270,9 +270,9 @@
     
             <li class="dropdown notification-list float-right">
                 <a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                    <img src="/template-assets/images/users/bill.jpg" alt="user-image" class="rounded-circle">
+                    <img src="/template-assets/images/users/user-6.jpg" alt="user-image" class="rounded-circle">
                     <span class="pro-user-name ml-1">
-                        Bill Hewitt <i class="mdi mdi-chevron-down"></i> 
+                        John Doe <i class="mdi mdi-chevron-down"></i> 
                     </span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-profile dropdown-menu-right dropdown-xl">
