--- a/app/views/layouts/admin/_footer.html.erb
+++ b/app/views/layouts/admin/_footer.html.erb
@@ -1,13 +1,18 @@
        <!-- Footer Start -->
         <footer class="footer">
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-9">
                         October 2019 Perkbox
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-1">
                         <div class="text-md-right footer-links d-none d-sm-block">
-                            <a href="/">Restart Prototype</a>
+                            <a href="/">No taskbar</a>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="text-md-right footer-links d-none d-sm-block">
+                            <a href="/admin/managecompany">With taskbar</a>
                         </div>
                     </div>
                 </div>
