--- a/app/views/admin_pages/managecompany.html.erb
+++ b/app/views/admin_pages/managecompany.html.erb
@@ -34,7 +34,7 @@
                 
                 <div class="row mb-2 mt-2">
                     <div class="col-12">
-                        <h1 class="mb-2 mt-2" style="font-family: dosis; font-weight: 500;">Welcome back, <span class="underline" style="border-bottom: 3px solid #00ADEE;">Jane</span>
+                        <h1 class="mb-2 mt-2" style="font-family: dosis; font-weight: 500;">Welcome back, <span class="underline" style="border-bottom: 3px solid #00ADEE;">John</span>
                         </h1>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                     <div class="col-lg-9"> 
                         <div class="row">
                             <div class="col-lg-6">
-                                <h3>Your perks</h3>
+                                <h3 style="font-family: dosis">Your perks picks</h3>
                             </div>
                              <div class="col-lg-6">
                                 <a href="" class="float-right btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">See all perks</a></h4>
@@ -52,7 +52,7 @@
                         </div>
                         
                         <div class="row mt-3">
-                            <div class="col-lg-4">
+                            <div class="col-lg-6">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <img class="card-img-top img-fluid" src="/template-assets/images/nero.png" alt="Card image cap">
                                     <div class="card-body">
@@ -70,7 +70,7 @@
                                 </div>
                             </div>
                              
-                            <div class="col-lg-4">
+                            <div class="col-lg-6">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <img class="card-img-top img-fluid" src="/template-assets/images/odeon2.png" alt="Card image cap">
                                     <div class="card-body">
@@ -82,24 +82,6 @@
                                                 </div>
                                                  <div class="col-lg-5">
                                                     <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
-                                                </div>
-                                            </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4">
-                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <img class="card-img-top img-fluid" src="/template-assets/images/hm2.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h3 class="card-title mb-3" style="font-family: dosis;">Stay stylish</h3>
-                                    
-                                            <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-7">
-                                                    <p class="mt-2" style="padding-top: 12px;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Digital voucher</p>
-                                                </div>
-                                                 <div class="col-lg-5">
-                                                    <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">9% off</h2>
                                                 </div>
                                             </div>
                                     </div>
@@ -123,7 +105,7 @@
 
                  <div class="row mt-2">
                     <div class="col-lg-6">
-                        <h3>Your activity</h3>
+                        <h3 style="font-family: dosis">Your activity</h3>
                     </div>
                      <div class="col-lg-6">
                         <a href="" class="float-right btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">See all recogntion</a></h4>
@@ -272,7 +254,7 @@
                                 </div>
                                 <div class="col-auto mt-1">
                                     <a href="/admin/managecompany2">
-                                        <button type="button" class="float-right btn btn-sm btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;">Complete and hide</button>
+                                        <button type="button" class="float-right btn btn-xs btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;">Complete and hide</button>
                                     </a>
                                 </div>
                             </div>
