--- a/app/views/admin_pages/managecompany.html.erb
+++ b/app/views/admin_pages/managecompany.html.erb
@@ -24,6 +24,10 @@
   cursor: pointer;
 }
 
+.sticky-top {
+    top: 156px;
+}
+
 </style>
 
 <% end %>
@@ -41,7 +45,7 @@
 
             <div id = "3" style="display:block">
                 <div class="row mt-3 mb-4">
-                    <div class="col-lg-9"> 
+                    <div class="col-lg-8"> 
                         <div class="row">
                             <div class="col-lg-6">
                                 <h3 style="font-family: dosis">Your perks picks</h3>
@@ -246,28 +250,30 @@
 
 
 
-                    <div class="col-lg-3">
-                        <div class="card-box" style="background-color: #f5f5f5;">
-                            <div class="row">
-                                <div class="col">
-                                    <h4 id="todo-message" style="font-family: dosis; font-weight: 600;">My Tasks</h4>
-                                </div>
-                                <div class="col-auto mt-1">
-                                    <a href="/admin/managecompany2">
-                                        <button type="button" class="float-right btn btn-xs btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;">Complete and hide</button>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="todoapp">
-                                <div class="row mt-2">
+                    <div class="col-lg-4">
+                        <div class="sticky-top sticky-offset" style="top: 90px;">
+                            <div class="card-box" style="background-color: #f5f5f5;">
+                                <div class="row">
                                     <div class="col">
-                                        <h5 id="todo-message"><span id="todo-remaining">1</span> of <span id="todo-total">3</span> remaining</h5>
+                                        <h4 id="todo-message" style="font-family: dosis; font-weight: 600;">My Tasks</h4>
+                                    </div>
+                                    <div class="col-auto mt-1">
+                                        <a href="/admin/managecompany2">
+                                            <button type="button" class="float-right btn btn-xs btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;">Complete all and hide</button>
+                                        </a>
                                     </div>
                                 </div>
+                                <div class="todoapp">
+                                    <div class="row mt-2">
+                                        <div class="col">
+                                            <h5 id="todo-message"><span id="todo-remaining">1</span> of <span id="todo-total">3</span> remaining</h5>
+                                        </div>
+                                    </div>
 
-                                <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 506.9937496185303px;"><ul class="list-group list-group-flush slimscroll todo-list" style="max-height: 330px; overflow: hidden; width: auto; height: 506.9937496185303px;" id="todo-list"><li class="list-group-item border-0 pl-1" style="background-color: #f5f5f5;"><div class="checkbox checkbox-primary"><input class="todo-done" id="7" type="checkbox"><label for="7">Set up your teams</label></div></li><li class="list-group-item border-0 pl-1" style="background-color: #f5f5f5;"><div class="checkbox checkbox-primary"><input class="todo-done" id="6" type="checkbox"><label for="6">Recognise a top performer</label></div></li><li class="list-group-item border-0 pl-1" style="background-color: #f5f5f5;"><div class="checkbox checkbox-primary"><input class="todo-done" id="5" type="checkbox"><label for="5">Resend your invite emails</label></div></li></ul><div class="slimScrollBar" style="background-color: rgb(158, 165, 171); width: 8px; position: absolute; top: 0px; opacity: 0.4; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; z-index: 99; right: 1px; height: 330px; background-position: initial initial; background-repeat: initial initial;"></div><div class="slimScrollRail" style="width: 8px; height: 100%; position: absolute; top: 0px; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; background-color: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px; background-position: initial initial; background-repeat: initial initial;"></div></div>
+                                    <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 506.9937496185303px;"><ul class="list-group list-group-flush slimscroll todo-list" style="max-height: 330px; overflow: hidden; width: auto; height: 506.9937496185303px;" id="todo-list"><li class="list-group-item border-0 pl-1" style="background-color: #f5f5f5;"><div class="checkbox checkbox-primary"><input class="todo-done" id="7" type="checkbox"><label for="7">Set up your teams</label></div></li><li class="list-group-item border-0 pl-1" style="background-color: #f5f5f5;"><div class="checkbox checkbox-primary"><input class="todo-done" id="6" type="checkbox"><label for="6">Recognise a top performer</label></div></li><li class="list-group-item border-0 pl-1" style="background-color: #f5f5f5;"><div class="checkbox checkbox-primary"><input class="todo-done" id="5" type="checkbox"><label for="5">Resend your invite emails</label></div></li></ul><div class="slimScrollBar" style="background-color: rgb(158, 165, 171); width: 8px; position: absolute; top: 0px; opacity: 0.4; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; z-index: 99; right: 1px; height: 330px; background-position: initial initial; background-repeat: initial initial;"></div><div class="slimScrollRail" style="width: 8px; height: 100%; position: absolute; top: 0px; display: none; border-top-left-radius: 7px; border-top-right-radius: 7px; border-bottom-right-radius: 7px; border-bottom-left-radius: 7px; background-color: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px; background-position: initial initial; background-repeat: initial initial;"></div></div>
 
-                            </div> <!-- .todoapp -->
+                                </div> <!-- .todoapp -->
+                            </div>
                         </div>
                     </div>
                 </div>
