--- a/app/views/admin_pages/managecompany.html.erb
+++ b/app/views/admin_pages/managecompany.html.erb
@@ -242,6 +242,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="mx-auto">
+                        <a href="" class="btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">Cancel</a>
+                    </div>
                 </div>
             </div>
 
