--- a/app/views/admin_pages/managecompany2.html.erb
+++ b/app/views/admin_pages/managecompany2.html.erb
@@ -34,7 +34,7 @@
                 
                 <div class="row mb-2 mt-2">
                     <div class="col-12">
-                        <h1 class="mb-2 mt-2" style="font-family: dosis; font-weight: 500;">Welcome back, <span class="underline" style="border-bottom: 3px solid #00ADEE;">John</span>
+                        <h1 class="mb-2 mt-2" style="font-family: dosis; font-weight: 500;">Welcome back, <span class="underline" style="border-bottom: 3px solid #00ADEE;">Jane</span>
                         </h1>
                     </div>
                 </div>
