--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
 
 <header id="topnav">
 <!-- Topbar Start -->
-<div class="navbar-custom" style="box-shadow: 0 2px 2px -2px rgba(0,0,0,.2)";>
+<div class="navbar-custom" style="border-bottom: 4px solid #35b8b2;";>
     <div class="container">
         <ul class="list-unstyled topnav-menu float-right mb-0 d-none d-lg-block">
 
@@ -162,8 +162,21 @@
 
             <li style="margin-top: 5px;">
                 <button type="button" class="btn btn-warning waves-effect waves-light mt-2 mr-4 ml-3 d-none d-lg-block
-" style="color: #3D3D36; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);">Continue setup</button>
+" style="color: #3D3D36; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); border-radius: 4px; padding-right: 30px; padding-left: 30px;">Continue setup</button>
             </li>
+
+            <div class="logo-box d-none d-lg-block">
+                <a href="managecompany2.html" class="logo text-center">
+                    <span class="logo-lg">
+                        <img src="/template-assets/images/deliveroo.png" alt="" height="50" style="margin-left: 15px;">
+                        <!-- <span class="logo-lg-text-light">UBold</span> -->
+                    </span>
+                    <span class="logo-sm">
+                        <!-- <span class="logo-sm-text-dark">U</span> -->
+                        <img src="/template-assets/images/perkboxsmall.png" alt="" height="44">
+                    </span>
+                </a>
+            </div>
     
         </ul>
 
