--- a/app/views/admin_pages/managecompany2.html.erb
+++ b/app/views/admin_pages/managecompany2.html.erb
@@ -53,21 +53,23 @@
                         
                         <div class="row mt-3">
                             <div class="col-lg-4">
-                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <img class="card-img-top img-fluid" src="/template-assets/images/nero.png" alt="Card image cap">
-                                    <div class="card-body">
-                                        <h3 class="card-title mb-3" style="font-family: dosis;">Your <span class="underline" style="border-bottom: 3px solid #00ADEE;">free</span> weekly coffee</h3>
-                                    
-                                            <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-7">
-                                                    <p class="mt-2" style="padding-top: 12px;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Digital voucher</p>
+                                <a href="/admin/dealpage">
+                                    <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                        <img class="card-img-top img-fluid" src="/template-assets/images/nero.png" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h3 class="card-title mb-3" style="font-family: dosis;">Your <span class="underline" style="border-bottom: 3px solid #00ADEE;">free</span> weekly coffee</h3>
+                                        
+                                                <div class="row mt-2" style="margin-bottom: -20px;">
+                                                    <div class="col-lg-7">
+                                                        <p class="mt-2" style="padding-top: 12px; color: #3D3D36;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Digital voucher</p>
+                                                    </div>
+                                                     <div class="col-lg-5">
+                                                        <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
+                                                    </div>
                                                 </div>
-                                                 <div class="col-lg-5">
-                                                    <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
-                                                </div>
-                                            </div>
+                                        </div>
                                     </div>
-                                </div>
+                                </a>
                             </div>
                              
                             <div class="col-lg-4">
