--- a/app/views/admin_pages/managecompany2.html.erb
+++ b/app/views/admin_pages/managecompany2.html.erb
@@ -53,7 +53,7 @@
                         
                         <div class="row mt-3">
                             <div class="col-lg-4">
-                                <a href="/admin/dealpage">
+                                <a href="#">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img-top img-fluid" src="/template-assets/images/nero.png" alt="Card image cap">
                                         <div class="card-body">
