--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -161,7 +161,7 @@
             </li>
 
             <li style="margin-top: 5px;">
-                <a href="https://invis.io/JWUCGMOSAN4" class="btn btn-warning waves-effect waves-light mt-2 mr-4 ml-3 d-none d-lg-block
+                <a href="https://invis.io/ZWUCOKU8NAQ" class="btn btn-warning waves-effect waves-light mt-2 mr-4 ml-3 d-none d-lg-block
 " style="color: #3D3D36; box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1); border-radius: 4px; padding-right: 30px; padding-left: 30px;">Continue setup</a>
                     
             </li>
