--- a/app/views/layouts/admin/_footer.html.erb
+++ b/app/views/layouts/admin/_footer.html.erb
@@ -2,12 +2,17 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-9">
+                    <div class="col-md-6">
                         October 2019 Perkbox
                     </div>
                     <div class="col-md-1">
                         <div class="text-md-right footer-links d-none d-sm-block">
                             <a href="/">No taskbar</a>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="text-md-right footer-links d-none d-sm-block">
+                            <a href="/admin/managecompany3">Admin view</a>
                         </div>
                     </div>
                     <div class="col-md-2">
