--- a/app/views/admin_pages/managecompany.html.erb
+++ b/app/views/admin_pages/managecompany.html.erb
@@ -54,7 +54,7 @@
                     <div class="col-lg-9"> 
                         <div class="row">
                             <div class="col-lg-6">
-                                <h3 style="font-family: dosis">Your perks picks</h3>
+                                <h3 style="font-family: dosis">Your perks</h3>
                             </div>
                              <div class="col-lg-6">
                                 <a href="" class="float-right btn btn-light waves-effect waves-light" style="background-color: #fff; color: #3D3D36;" id="btn-archive">See all perks</a></h4>
@@ -98,19 +98,6 @@
                                 </div>
                             </div>
 
-                        </div>
-                        <div class="row mt-2">
-                            <div class="col-lg-12">
-                                <div class="card card-body text-center" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="card-body">
-                                        <div class="mx-auto">
-                                            <img src="/template-assets/images/medical.png" style="max-width: 200px;">
-                                            <h4 class="card-title mb-2 pt-3" style="font-family: dosis;">Get instant, 24/7 access to our online GP service</h4>
-                                                <button onclick="replace();return false"/ type="button" class="btn btn-warning waves-effect waves-light mt-3" style="color: #3D3D36">Sign up for free</button> 
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
 
                  <div class="row mt-2">
