--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -69,7 +69,7 @@ span.ml-2.bill:hover {
                                 <a href="#">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <div class="card-body">
-                                            <h3 class="card-title mb-3" style="font-family: dosis;">Admin</h3>
+                                            <h3 class="card-title mb-3" style="font-family: dosis;">Admin/Continue setup</h3>
                                             <p style="color: #3D3D36;"><i>Show the most relevent admin tasks for people to do. If still in setup mode. Drive people back into the setup flow</i></p>
                                         
                                                 <div class="row mt-2" style="margin-bottom: -20px;">
