--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -48,7 +48,7 @@ span.ml-2.bill:hover {
 
                         <div class="custom-control custom-switch float-right mt-2">
                             <input type="checkbox" id="check" onclick="Check()" class="custom-control-input">
-                            <label class="custom-control-label" for="check">Preview your employee's homepage</label>
+                            <label class="custom-control-label" for="check">Preview an example employee's homepage</label>
                         </div>
 
                     </div>
@@ -85,7 +85,7 @@ span.ml-2.bill:hover {
                                 </a>
                             </div>
 
-                            <div class="col-lg-12">
+                            <div class="col-lg-4">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="card-body">
                                         <h3 class="card-title mb-3" style="font-family: dosis;">Insights</h3>
@@ -103,7 +103,7 @@ span.ml-2.bill:hover {
                                 </div>
                             </div>
 
-                            <div class="col-lg-12">
+                            <div class="col-lg-4">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="card-body">
                                         <h3 class="card-title mb-3" style="font-family: dosis;">Reward & Recognition</h3>
@@ -121,7 +121,7 @@ span.ml-2.bill:hover {
                                 </div>
                             </div>
 
-                            <div class="col-lg-12">
+                            <div class="col-lg-4">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="card-body">
                                         <h3 class="card-title mb-3" style="font-family: dosis;">Perks</h3>
