--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -84,7 +84,16 @@ span.ml-2.bill:hover {
                                     </div>
                                 </a>
                             </div>
+                        </div>
 
+
+                             <div class="row mt-2">
+                                    <div class="col-lg-6">
+                                        <h3 style="font-family: dosis">Your products</h3>
+                                    </div>
+                            </div>
+
+                        <div class="row mt-3 mb-4">
                             <div class="col-lg-4">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="card-body">
@@ -140,6 +149,7 @@ span.ml-2.bill:hover {
                             </div>
 
                         </div>
+                    
                         
 
                  
