--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -95,57 +95,39 @@ span.ml-2.bill:hover {
 
                         <div class="row mt-3 mb-4">
                             <div class="col-lg-4">
-                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="card-body">
-                                        <h3 class="card-title mb-3" style="font-family: dosis;">Insights</h3>
-                                        <p style="color: #3D3D36;"><i>Show the relevent insights scores</i></p>
-                                    
-                                            <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-7">
-                                                    
-                                                </div>
-                                                 <div class="col-lg-5">
-                                                    
-                                                </div>
-                                            </div>
-                                    </div>
-                                </div>
+                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <div class="pt-4 pb-2">
+                                        <img src="/template-assets/images/users/background.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
+
+                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Insights</a></h3>
+                                        <p>Measure and improve employee engagement</p>
+
+                                    </div> <!-- end .padding -->
+                                </div> <!-- end card-box-->
                             </div>
 
                             <div class="col-lg-4">
-                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="card-body">
-                                        <h3 class="card-title mb-3" style="font-family: dosis;">Reward & Recognition</h3>
-                                            <p style="color: #3D3D36;"><i>Show the most r&r activity</i></p>
-                                    
-                                            <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-7">
-                                                    
-                                                </div>
-                                                 <div class="col-lg-5">
-                                                    
-                                                </div>
-                                            </div>
-                                    </div>
-                                </div>
+                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <div class="pt-4 pb-2">
+                                        <img src="/template-assets/images/users/background.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
+
+                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Recognition</a></h3>
+                                        <p>Reward & recognise top performers</p>
+
+                                    </div> <!-- end .padding -->
+                                </div> <!-- end card-box-->
                             </div>
 
                             <div class="col-lg-4">
-                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
-                                    <div class="card-body">
-                                        <h3 class="card-title mb-3" style="font-family: dosis;">Perks</h3>
-                                        <p style="color: #3D3D36;"><i>Show the most relevent perks</i></p>
-                                    
-                                            <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-7">
-                                                    
-                                                </div>
-                                                 <div class="col-lg-5">
-                                                    
-                                                </div>
-                                            </div>
-                                    </div>
-                                </div>
+                                <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <div class="pt-4 pb-2">
+                                        <img src="/template-assets/images/users/background.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
+
+                                        <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Perks</a></h3>
+                                        <p>Hundreds of exclusive discounts and perks</p>
+
+                                    </div> <!-- end .padding -->
+                                </div> <!-- end card-box-->
                             </div>
 
                         </div>
