--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -100,7 +100,7 @@ span.ml-2.bill:hover {
                                         <img src="/template-assets/images/users/background.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
 
                                         <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Insights</a></h3>
-                                        <p>Measure and improve employee engagement</p>
+                                        <p class="mb-3">Measure and improve employee engagement</p>
 
                                     </div> <!-- end .padding -->
                                 </div> <!-- end card-box-->
@@ -112,7 +112,7 @@ span.ml-2.bill:hover {
                                         <img src="/template-assets/images/users/background.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
 
                                         <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Recognition</a></h3>
-                                        <p>Reward & recognise top performers</p>
+                                        <p class="mb-3">Reward & recognise top performers</p>
 
                                     </div> <!-- end .padding -->
                                 </div> <!-- end card-box-->
@@ -124,7 +124,7 @@ span.ml-2.bill:hover {
                                         <img src="/template-assets/images/users/background.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
 
                                         <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Perks</a></h3>
-                                        <p>Hundreds of exclusive discounts and perks</p>
+                                        <p class="mb-3">Hundreds of exclusive discounts and perks</p>
 
                                     </div> <!-- end .padding -->
                                 </div> <!-- end card-box-->
