--- a/app/views/admin_pages/managecompany3.html.erb
+++ b/app/views/admin_pages/managecompany3.html.erb
@@ -98,7 +98,7 @@ span.ml-2.bill:hover {
                             <div class="col-lg-4">
                                 <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/background2.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
+                                        <img src="/template-assets/images/users/Perks.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
                                         <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Perks</a></h3>
                                         <p class="mb-3">Hundreds of exclusive discounts and perks</p>
@@ -110,7 +110,7 @@ span.ml-2.bill:hover {
                             <div class="col-lg-4">
                                 <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/background2.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
+                                        <img src="/template-assets/images/users/Recognition.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
                                         <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Recognition</a></h3>
                                         <p class="mb-3">Reward & recognise top performers</p>
@@ -122,7 +122,7 @@ span.ml-2.bill:hover {
                             <div class="col-lg-4">
                                 <div class="text-center card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <div class="pt-4 pb-2">
-                                        <img src="/template-assets/images/users/background2.png" class="rounded-circle img-thumbnail avatar-xl" alt="profile-image">
+                                        <img src="/template-assets/images/users/Insights.png" class="rounded-circle img-thumbnail avatar-md" alt="profile-image">
 
                                         <h3 class="mt-3"><a href="extras-profile.html" class="text-dark">Insights</a></h3>
                                         <p class="mb-3">Measure and improve employee engagement</p>
@@ -305,7 +305,7 @@ span.ml-2.bill:hover {
                         </div>
                         
                         <div class="row mt-3">
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
                                 <a href="#">
                                     <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                         <img class="card-img-top img-fluid" src="/template-assets/images/nero.png" alt="Card image cap">
@@ -313,10 +313,10 @@ span.ml-2.bill:hover {
                                             <h3 class="card-title mb-3" style="font-family: dosis;">Your weekly coffee</h3>
                                         
                                                 <div class="row mt-2" style="margin-bottom: -20px;">
-                                                    <div class="col-lg-7">
+                                                    <div class="col-lg-8">
                                                         <p class="mt-2" style="padding-top: 12px; color: #3D3D36;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Digital voucher</p>
                                                     </div>
-                                                     <div class="col-lg-5">
+                                                     <div class="col-lg-4">
                                                         <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
                                                     </div>
                                                 </div>
@@ -325,17 +325,17 @@ span.ml-2.bill:hover {
                                 </a>
                             </div>
                              
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <img class="card-img-top img-fluid" src="/template-assets/images/odeon2.png" alt="Card image cap">
                                     <div class="card-body">
                                         <h3 class="card-title mb-3" style="font-family: dosis;">Your monthly cinema</h3>
                                     
                                             <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-7">
-                                                    <p class="mt-2" style="padding-top: 12px;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Digital voucher</p>
+                                                <div class="col-lg-8">
+                                                    <p class="mt-2" style="padding-top: 12px;"><img src="/template-assets/images/voucher.png" style="max-width: 20px;"> Voucher</p>
                                                 </div>
-                                                 <div class="col-lg-5">
+                                                 <div class="col-lg-4">
                                                     <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
                                                 </div>
                                             </div>
@@ -343,17 +343,35 @@ span.ml-2.bill:hover {
                                 </div>
                             </div>
 
-                            <div class="col-lg-4">
+                            <div class="col-lg-3">
                                 <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
                                     <img class="card-img-top img-fluid" src="/template-assets/images/medical1.png" alt="Card image cap">
                                     <div class="card-body">
                                         <h3 class="card-title mb-3" style="font-family: dosis;">Perkbox Medical</h3>
                                     
                                             <div class="row mt-2" style="margin-bottom: -20px;">
-                                                <div class="col-lg-7">
+                                                <div class="col-lg-8">
                                                     <p class="mt-2" style="padding-top: 12px;">24/7 Online GP</p>
                                                 </div>
-                                                 <div class="col-lg-5">
+                                                 <div class="col-lg-4">
+                                                    <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3">
+                                <div class="card bill" style="border: 1px solid rgba(0,0,0,.08);">
+                                    <img class="card-img-top img-fluid" src="/template-assets/images/example.png" alt="Card image cap">
+                                    <div class="card-body">
+                                        <h3 class="card-title mb-3" style="font-family: dosis;">Example Offer</h3>
+                                    
+                                            <div class="row mt-2" style="margin-bottom: -20px;">
+                                                <div class="col-lg-9">
+                                                    <p class="mt-2" style="padding-top: 12px;">Example type</p>
+                                                </div>
+                                                 <div class="col-lg-3">
                                                     <h2 class="float-right mt-2 mb-0" style="font-family: dosis;">Free</h2>
                                                 </div>
                                             </div>
